--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,31 @@
-.App {
+.app {
+  //THEME
+  color: var(--text-primary);
+  background-color: var(--background);
+
+  // margin-top: -16px;
+  min-height: 100vh;
   text-align: center;
+
+  padding-top: 50px;
 }
 
+.button-primary {
+  color: var(--text-primary);
+  background-color: var(--background);
+  border: 2px var(--text-primary) solid;
+  cursor: pointer;
+}
+
+.text-box {
+  width: 30%;
+  margin-left: 35%;
+  margin-right: 35%;
+  border: 1px var(--text-primary) solid;
+}
+
+
+/* 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +59,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
